--- a/src/style.less
+++ b/src/style.less
@@ -38,7 +38,12 @@ body .tui-editor-contents {
 }
 
 
-
+html{
+  background-color: #f4f5f5;
+  color: #333;
+  word-break: break-word;
+  text-rendering: optimizeLegibility;
+}
 
 a{
   text-decoration: none;
