feat(user): 新增用户编辑

--- a/src/style.less
+++ b/src/style.less
@@ -1,6 +1,9 @@
 .flex {
   display: flex;
 }
+.flex-warp{
+  flex-wrap: wrap;
+}
 
 .flex-just-beew {
   display: flex;
@@ -31,6 +34,16 @@
   display: flex;
   ;
   justify-content: center;
+}
+
+.w-max{
+  width: 100%;
+}
+.h-max{
+  height: 100%;
+}
+.text-centen{
+  text-align: center;
 }
 
 body .tui-editor-contents {
