fix: 优化回复组件

--- a/src/style.less
+++ b/src/style.less
@@ -4,7 +4,10 @@
 .flex-warp{
   flex-wrap: wrap;
 }
-
+.flex-end{
+  display: flex;
+  justify-content: flex-end;
+}
 .flex-just-beew {
   display: flex;
   justify-content: space-between;
@@ -26,13 +29,11 @@
 
 .flex-item-center {
   display: flex;
-  ;
   align-items: center;
 }
 
 .flex-just-center {
   display: flex;
-  ;
   justify-content: center;
 }
 
