fix: 修改样式 兼容移动端

--- a/src/style.less
+++ b/src/style.less
@@ -48,7 +48,11 @@
 .text-centen{
   text-align: center;
 }
-
+.text-ellipsis {
+  overflow: hidden;
+  text-overflow:ellipsis;
+  white-space: nowrap;
+}
 body .tui-editor-contents {
   font-size: 15px;
 }
